--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flip_smyrdack">
+    package="pl.filipguzdek.flipsmyrdack">
    <application
         android:label="flip_smyrdack"
         android:icon="@mipmap/ic_launcher">
