--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  google_fonts: ^2.0.0
+  location: ^4.1.1
+  shared_preferences: ^2.0.5
+  url_launcher: ^6.0.3
+  geodesy: ^0.3.2
+  provider: ^5.0.0
+  fl_chart: ^0.36.0
+  intl: ^0.17.0
+  geocoder: ^0.2.1
+  firebase_core: ^1.1.0
+  cloud_firestore: ^2.0.0
+  cloud_functions: ^1.0.6
+  firebase_storage: ^8.0.5
+  firebase_messaging: ^9.1.3
+  google_sign_in: ^5.0.2
+  firebase_auth: ^1.1.3
+  firebase_auth_web: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
