--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.1+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -41,6 +41,9 @@ dependencies:
   google_sign_in: ^5.0.2
   firebase_auth: ^1.1.3
   firebase_auth_web: ^1.1.1
+  animations: ^2.0.0
+  flutter_form_builder: ^6.0.0
+  image_picker: ^0.7.5
 
 
   # The following adds the Cupertino Icons font to your application.
