--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.1+2
+version: 1.0.2+4003
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -44,7 +44,11 @@ dependencies:
   animations: ^2.0.0
   flutter_form_builder: ^6.0.0
   image_picker: ^0.7.5
-
+  skeleton_text: ^3.0.0
+  flutter_image_compress: ^1.0.0
+  local_hero: ^0.1.0
+  getwidget: ^2.0.2
+  badges: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,8 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
