--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+4003
+version: 1.0.4+4005
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -50,6 +50,9 @@ dependencies:
   getwidget: ^2.0.2
   badges: ^2.0.1
   carousel_slider: ^4.0.0-nullsafety.0
+  flutter_local_notifications: ^5.0.0+4
+  pay: ^1.0.1
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
