--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   badges: ^2.0.1
   carousel_slider: ^4.0.0-nullsafety.0
   flutter_local_notifications: ^5.0.0+4
-  pay: ^1.0.1
+  # pay: ^1.0.1
+  cached_network_image: ^3.0.0
+  photo_view: ^0.11.1
   
 
   # The following adds the Cupertino Icons font to your application.
