--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.5+4006
+version: 1.0.7+4009
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -54,6 +54,7 @@ dependencies:
   # pay: ^1.0.1
   cached_network_image: ^3.0.0
   photo_view: ^0.11.1
+  # google_mobile_ads: ^0.13.0
   
 
   # The following adds the Cupertino Icons font to your application.
