--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cached_network_image: ^3.0.0
   photo_view: ^0.11.1
   # google_mobile_ads: ^0.13.0
+  marquee: ^2.1.0
   
 
   # The following adds the Cupertino Icons font to your application.
