--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.7+4009
+version: 1.1.0+4011
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -56,6 +56,7 @@ dependencies:
   photo_view: ^0.11.1
   # google_mobile_ads: ^0.13.0
   marquee: ^2.1.0
+  pin_code_fields: ^7.2.0
   
 
   # The following adds the Cupertino Icons font to your application.
