--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+4012
+version: 1.1.3+4015
+# !!!!    also change the v12 in MainScreen and apiVersion in HomeScreen     !!!!
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -51,12 +52,15 @@ dependencies:
   badges: ^2.0.1
   carousel_slider: ^4.0.0-nullsafety.0
   flutter_local_notifications: ^5.0.0+4
-  # pay: ^1.0.1
+  # pay: ^1.0.4
   cached_network_image: ^3.0.0
   photo_view: ^0.11.1
   # google_mobile_ads: ^0.13.0
   marquee: ^2.1.0
   pin_code_fields: ^7.2.0
+  flutter_phone_direct_caller: ^2.0.0
+  native_admob_flutter: ^1.3.2
+  flutter_native_splash: ^1.1.8+4
   
 
   # The following adds the Cupertino Icons font to your application.
