--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+4016
+version: 1.2.1+4017
 # !!!!    also change the v12 in MainScreen and apiVersion in HomeScreen     !!!!
 
 environment:
@@ -26,12 +26,12 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   google_fonts: ^2.0.0
-  location: ^4.1.1
+  # location: ^4.1.1
   shared_preferences: ^2.0.5
   url_launcher: ^6.0.4
-  geodesy: ^0.3.2
+  # geodesy: ^0.3.2
   provider: ^5.0.0
-  fl_chart: ^0.36.0
+  # fl_chart: ^0.36.0
   intl: ^0.17.0
   geocoder: ^0.2.1
   firebase_core: ^1.1.0
@@ -43,17 +43,17 @@ dependencies:
   firebase_auth: ^1.1.3
   firebase_auth_web: ^1.1.1
   animations: ^2.0.0
-  flutter_form_builder: ^6.0.0
+  # flutter_form_builder: ^6.0.0
   image_picker: ^0.7.5
-  skeleton_text: ^3.0.0
+  # skeleton_text: ^3.0.0
   flutter_image_compress: ^1.0.0
   local_hero: ^0.1.0
-  getwidget: ^2.0.2
+  # getwidget: ^2.0.2
   badges: ^2.0.1
   carousel_slider: ^4.0.0-nullsafety.0
-  flutter_local_notifications: ^5.0.0+4
+  # flutter_local_notifications: ^5.0.0+4
   # pay: ^1.0.4
-  cached_network_image: ^3.0.0
+  # cached_network_image: ^3.0.0
   photo_view: ^0.11.1
   # google_mobile_ads: ^0.13.0
   marquee: ^2.1.0
@@ -61,6 +61,8 @@ dependencies:
   flutter_phone_direct_caller: ^2.0.0
   native_admob_flutter: ^1.3.2
   flutter_native_splash: ^1.1.8+4
+  in_app_update: ^2.0.0
+  in_app_review: ^2.0.2
   
 
   # The following adds the Cupertino Icons font to your application.
