--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.1+4017
+version: 1.2.2+4019
 # !!!!    also change the v12 in MainScreen and apiVersion in HomeScreen     !!!!
 
 environment:
@@ -38,7 +38,6 @@ dependencies:
   cloud_firestore: ^2.0.0
   cloud_functions: ^1.0.6
   firebase_storage: ^8.0.5
-  firebase_messaging: ^9.1.3
   google_sign_in: ^5.0.2
   firebase_auth: ^1.1.3
   firebase_auth_web: ^1.1.1
@@ -63,6 +62,8 @@ dependencies:
   flutter_native_splash: ^1.1.8+4
   in_app_update: ^2.0.0
   in_app_review: ^2.0.2
+  firebase_crashlytics: ^2.0.5
+  ndialog: ^4.1.0
   
 
   # The following adds the Cupertino Icons font to your application.
