--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,8 @@ android {
             signingConfig signingConfigs.release
             firebaseCrashlytics {
                 nativeSymbolUploadEnabled true
+                strippedNativeLibsDir 'build/intermediates/stripped_native_libs/release/out/lib'
+                unstrippedNativeLibsDir 'build/intermediates/merged_native_libs/release/out/lib'
             }
         }
     }
