--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,11 @@ dependencies:
   # flutter_local_notifications: ^5.0.0+4
   # pay: ^1.0.4
   # cached_network_image: ^3.0.0
-  photo_view: ^0.11.1
+  # photo_view: ^0.11.1
+  photo_view:
+    git:
+      url: git://github.com/fireslime/photo_view
+      ref: 52685ab7beaf8a9107904bdb8a1590924015d016
   # google_mobile_ads: ^0.13.0
   marquee: ^2.1.0
   pin_code_fields: ^7.2.0
