--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   firebase_crashlytics: ^2.0.5
   ndialog: ^4.1.0
   flutter_statusbarcolor_ns: ^0.3.0-nullsafety
+  uuid: ^3.0.4
   
 
   # The following adds the Cupertino Icons font to your application.
