--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.8.0+4027
+version: 1.8.1+4028
 # !!!!    also change the v12 in MainScreen and apiVersion in HomeScreen     !!!!
 
 environment:
@@ -36,14 +36,14 @@ dependencies:
   geocoder: ^0.2.1
   firebase_core: ^1.1.0
   cloud_firestore: ^2.0.0
-  cloud_functions: ^1.0.6
-  firebase_storage: ^8.0.5
+  cloud_functions: ^3.0.0
+  firebase_storage: ^10.0.1
   google_sign_in: ^5.0.2
-  firebase_auth: ^1.1.3
-  firebase_auth_web: ^1.1.1
+  firebase_auth: ^3.0.1
+  firebase_auth_web: ^3.0.0
   animations: ^2.0.0
   # flutter_form_builder: ^6.0.0
-  image_picker: ^0.7.5
+  image_picker: ^0.8.2
   # skeleton_text: ^3.0.0
   flutter_image_compress: ^1.0.0
   local_hero: ^0.1.0
@@ -75,8 +75,9 @@ dependencies:
   background_mode: ^1.0.1
   expansion_tile_card: ^2.0.0
   location: ^4.3.0
-  loading_indicator: ^2.1.1
+  loading_indicator: ^3.0.1
   flutter_smart_dialog: ^2.1.6
+  timeago: ^3.1.0
   
 
   # The following adds the Cupertino Icons font to your application.
